--- a/contact.html
+++ b/contact.html
@@ -24,21 +24,21 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link magic-hover magic-hover__square" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="collection.html">Collections</a>
+                        <a class="nav-link magic-hover magic-hover__square" href="collection.html">Collections</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="ourStory.html">Our Story</a>
+                        <a class="nav-link magic-hover magic-hover__square" href="ourStory.html">Our Story</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="contact.html">Contact Us</a>
+                        <a class="nav-link active magic-hover magic-hover__square" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
                 <div class="icons">
-                    <i class="fa-regular fa-heart me-2" onclick="openPopUp('fav')"></i>
-                    <i class="fa-solid fa-bag-shopping cartIcon" onclick="openPopUp('cart')"></i>
+                    <i class="fa-regular fa-heart me-1 magic-hover magic-hover__square p-1" onclick="openPopUp('fav')"></i>
+                    <i class="fa-solid fa-bag-shopping cartIcon magic-hover magic-hover__square p-1" onclick="openPopUp('cart')"></i>
                 </div>
             </div>
         </div>
@@ -91,12 +91,12 @@
                 <div class="box">
                     <i class="fa-regular fa-envelope"></i>
                     <h3>Email :</h3>
-                    <a href="mailto:noirescent@gmail.com">noirescent@gmail.com</a>
+                    <a href="mailto:noirescent@gmail.com" class="magic-hover magic-hover__square">noirescent@gmail.com</a>
                 </div>
                 <div class="box">
                     <i class="fa-brands fa-whatsapp"></i>
                     <h3>WhatsApp :</h3>
-                    <a href="tel:+201276849218">01276849218</a>
+                    <a href="tel:+201276849218" class="magic-hover magic-hover__square">01276849218</a>
                 </div>
             </div>
         </div>
