--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active magic-hover magic-hover__square" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="collection.html">Collections</a>
+                        <a class="nav-link magic-hover magic-hover__square" href="collection.html">Collections</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="ourStory.html">Our Story</a>
+                        <a class="nav-link magic-hover magic-hover__square" href="ourStory.html">Our Story</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="contact.html">Contact Us</a>
+                        <a class="nav-link magic-hover magic-hover__square" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
                 <div class="icons">
-                    <i class="fa-regular fa-heart me-2" onclick="openPopUp('fav')"></i>
-                    <i class="fa-solid fa-bag-shopping cartIcon" onclick="openPopUp('cart')"></i>
+                    <i class="fa-regular fa-heart me-1 magic-hover magic-hover__square p-1" onclick="openPopUp('fav')"></i>
+                    <i class="fa-solid fa-bag-shopping cartIcon magic-hover magic-hover__square p-1" onclick="openPopUp('cart')"></i>
                 </div>
             </div>
         </div>
@@ -54,7 +54,7 @@
                     <div class="item">
                         <h2 class="mb-3">Embrace the <br> Essence of <span class="mainColor fw-bold">Luxury</span></h2>
                         <p>Indulge in the world of luxury perfumes and fragrances at <span class="mainColor fw-bold">Noiré Scent</span>. Discover elegance and sophistication with our exclusive collection that captivates the senses.</p>
-                        <a href="#Signature" class="btn">Signature Scents</a>
+                        <a href="#Signature" class="btn magic-hover magic-hover__square">Signature Scents</a>
                     </div>
                 </div>
                 <div class="col-md-6 part">
@@ -74,7 +74,7 @@
             </div>
             <p>At Noir Essence, we believe that a fragrance is more than just a scent — it’s an emotion, a memory, a statement of identity.
                 Our creations blend timeless elegance with modern artistry, capturing the essence of sophistication in every bottle.</p>
-            <a href="ourStory.html" class="btn">Discover Our Story</a>
+            <a href="ourStory.html" class="btn magic-hover magic-hover__square">Discover Our Story</a>
         </div>
     </section>
 
@@ -95,7 +95,7 @@
                                 <h3>Amber Essence</h3>
                                 <p>Warm amber blended with soft spice</p>
                                 <div class="button">
-                                    <a href="collection.html">Discover Collections</a>
+                                    <a href="collection.html" class="magic-hover magic-hover__square">Discover Collections</a>
                                 </div>
                             </div>
                         </div>
@@ -106,7 +106,7 @@
                                 <h3>Azure Mist</h3>
                                 <p>Fresh, crisp, and elegantly smooth</p>
                                 <div class="button">
-                                    <a href="collection.html">Discover Collections</a>
+                                    <a href="collection.html" class="magic-hover magic-hover__square">Discover Collections</a>
                                 </div>
                             </div>
                         </div>
@@ -117,7 +117,7 @@
                                 <h3>Noir Intense</h3>
                                 <p>Bold and timeless with a hint of mystery</p>
                                 <div class="button">
-                                    <a href="collection.html">Discover Collections</a>
+                                    <a href="collection.html" class="magic-hover magic-hover__square">Discover Collections</a>
                                 </div>
                             </div>
                         </div>
@@ -155,8 +155,8 @@
             <i class="fa-solid fa-xmark close" onclick="closePopUp()"></i>
             <div class="row"></div>
             <div class="btns">
-                <button class="btn" onclick="removeAll()">Remove All</button>
-                <button class="btn checkout" onclick="checkout()">Continue</button>    
+                <button class="btn magic-hover magic-hover__square" onclick="removeAll()">Remove All</button>
+                <button class="btn checkout magic-hover magic-hover__square" onclick="checkout()">Continue</button>    
             </div>
             <div class="empty">
                 <h5>The Cart Is Empty</h5>
