--- a/ourStory.html
+++ b/ourStory.html
@@ -24,21 +24,21 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link magic-hover magic-hover__square" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="collection.html">Collections</a>
+                        <a class="nav-link magic-hover magic-hover__square" href="collection.html">Collections</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="ourStory.html">Our Story</a>
+                        <a class="nav-link active magic-hover magic-hover__square" href="ourStory.html">Our Story</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="contact.html">Contact Us</a>
+                        <a class="nav-link magic-hover magic-hover__square" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
                 <div class="icons">
-                    <i class="fa-regular fa-heart me-2" onclick="openPopUp('fav')"></i>
-                    <i class="fa-solid fa-bag-shopping cartIcon" onclick="openPopUp('cart')"></i>
+                    <i class="fa-regular fa-heart me-1 magic-hover magic-hover__square p-1" onclick="openPopUp('fav')"></i>
+                    <i class="fa-solid fa-bag-shopping cartIcon magic-hover magic-hover__square p-1" onclick="openPopUp('cart')"></i>
                 </div>
             </div>
         </div>
@@ -160,8 +160,8 @@
             <i class="fa-solid fa-xmark close" onclick="closePopUp()"></i>
             <div class="row"></div>
             <div class="btns">
-                <button class="btn" onclick="removeAll()">Remove All</button>
-                <button class="btn checkout" onclick="checkout()">Continue</button>    
+                <button class="btn magic-hover magic-hover__square" onclick="removeAll()">Remove All</button>
+                <button class="btn checkout magic-hover magic-hover__square" onclick="checkout()">Continue</button>    
             </div>
             <div class="empty">
                 <h5>The Cart Is Empty</h5>
